<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AdicionarTarefaActivity">


    <!-- Campo de título -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tituloLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/t_tulo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de descrição -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descricaoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/descri_o"
        app:layout_constraintTop_toBottomOf="@id/tituloLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de data -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dataLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/data"
        app:layout_constraintTop_toBottomOf="@id/descricaoLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botão de salvar tarefa -->

    <Button
        android:id="@+id/btnSalvarTarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/salvar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/horaLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hora"
        app:layout_constraintTop_toBottomOf="@id/dataLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
